2008-06-05  Evan Monroig  <evan.monroig@gmail.com>

	* lapack-methods.lisp: updated -- works only for foreign array
	based implementation and not for MATVIEW matrices (for this I need
	to define a common class type that groups normal matrices and
	MATVIEW matrices of one implementation and one element-type)

	* lapack-utils.lisp: updated

	* tests.lisp: updated all tests except GEMM for MATVIEWs which
	doesn't work

	* old/fnv-matrix.lisp: moved the old implementation here

	* matrix-foreign-array.lisp: implementation based on foreign
	arrays

	* matrix-lisp-array.lisp: implementation based on lisp arrays

	* matrix.lisp: rewritten the matrix class interface

2008-06-04  Evan Monroig  <evan.monroig@gmail.com>

	* experimental/matrix.lisp: started to rewrite the matrix class
	interface to add FFA arrays as well

2008-05-20  Evan Monroig  <evan.monroig@gmail.com>

	* experimental/element-access.lisp (with-fast-access): try at
	using a higher-level macro that defines local macros to override
	VREF and gain 10x speed.

2008-05-19  Evan Monroig  <evan.monroig@gmail.com>

	* experimental/element-access.lisp: add execution times

	* benchmark/lisp-vs-c-aref.lisp: moved experimental benchmarks to
	experimental/element-access.lisp

	* experimental/element-access.lisp: clean up and add some
	documentation - these are just experiments anyway

2008-05-17  Evan Monroig  <evan.monroig@gmail.com>

	* tests.lisp (make-matrix-double-4, make-matrix-double-3)
	(make-matrix-double-2, make-matrix-double-1): don't test matrices
	for which one of the sizes is zero
	(make-matrix-double-zero-size): separate tests for zero size (does
	not work on clisp)
	(transpose-double, window-double, setf-mref, copy): for clisp,
	don't test matrices for which one of the sizes is zero

2008-05-11  Evan Monroig  <evan.monroig@gmail.com>

	* lapack-utils.lisp (walk-and-replace): replace by common-lisp
	function SUBLIS

2008-05-07  Evan Monroig  <evan.monroig@gmail.com>
